--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ html, body{
 
 .cart{
   color: rgb(245, 245, 245);
-  margin-right: 4rem;
+  margin-right: 2rem;
   position: relative;
   font-size: 2.5rem;
 }
@@ -36,7 +36,6 @@ html, body{
   width:1.6rem;
   font-size: 1rem;
   font-weight: 600;
-  /* background-color: #4cd137; */
   color: #ffffff;
   border-radius: 50%;
   top:0;
@@ -77,4 +76,13 @@ html, body{
 
 .card{
   border-radius: 20px;
+}
+
+.btn-quantity{
+  font-weight: 1000;
+  color: black;
+}
+
+.empty{
+  color: rgba(77, 77, 77, 0.692);
 }
